# tomodoro

./: .gitignore  Cargo.nix  Cargo.toml  README.md  default.nix  falke.nix  flake.nix  log_start  noname.gv  renderd_statefullwidget.txt  shell.nix  text.txt  tomodoro.json  tomodoro.toml
benchmarking/: perf.data  perf.data.old
src/: .statefull_timer.rs.rustfmt  State.rs  app.rs  backbone.rs  button.rs  button_style.rs  button_widget.rs  commands.rs  config.rs  constructor.rs  directions.rs  displayable.rs  frame_util.rs  main.rs  player.rs  runner.rs  screen.rs  state.rs  state_displayer.rs  stateful_button.rs  stateful_timer.rs  statefull_timer.rs  temp  timer_state.rs  timer_widget.rs  trait_holder.rs  widget_fixer.rs
src/capabilities/: mod.rs
src/widgets/: mod.rs
