[package]
name = "tomodoro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.8"
tui = "0.19"
crossterm = "0.25"
rand = "0.8.5"
json = "0.12.4"
serde = "1.0.190"
serde_json = "1.0.108"
toml = "0.8.6"
enigo = "0.1.3"
rodio = "0.17.3"
